--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
     "axios": "^1.4.0",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
